force-app/main/default/objects/LeadScoringHistory__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <label>Lead ID</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>Reference to the Lead record</description>
</CustomField>