force-app/main/default/objects/LeadScoringHistory__c/fields/Lead_Reference__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reference__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Scoring Histories</relationshipLabel>
    <relationshipName>Lead_Scoring_Histories</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>