force-app/main/default/objects/LeadScoringHistory__c/fields/New_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Score__c</fullName>
    <label>New Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>New lead score after update</description>
</CustomField>