force-app/main/default/objects/LeadScoringHistory__c/fields/Previous_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_Score__c</fullName>
    <label>Previous Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>